--- a/index.html
+++ b/index.html
@@ -7,10 +7,29 @@
 </head>
 <body>
     <script>
-        const userName = window.prompt('ユーザー名を入力してください');
-        const sum = window.prompt('合計金額を入力してください。');
-        const total = Math.round(sum * 1.1 );
-        document.write(`${userName}さんの合計金額は${total}円となります。`)
+        // const userName = window.prompt('ユーザー名を入力してください');
+        // const sum = window.prompt('合計金額を入力してください。');
+        // const total = Math.round(sum * 1.1 );
+        // document.write(`${userName}さんの合計金額は${total}円となります。`)
+        
+        const members = [
+            {name:  "山田太郎" , age:42 , hobby: "ギター"},
+            {name:  "斎藤すぐる" , age:46 , hobby: "車"},
+            {name:  "田中よしお" , age:32 , hobby: "旅行、カメラ"},
+            {name:  "高橋とおる" , age:25 , hobby: "絵を描くこと"}
+        ]
+        for(let i = 0; i < members.length ; i++){
+            document.write(`名前:${members[i].name} 年齢:${members[i].age} 趣味:${members[i].hobby} <br>`);
+        }
+        document.write('<br>')
+        const sortMembers = members.sort(function(a,b){
+            if(a.age < b.age) return -1;
+            if(a.age > b.age) return 1;
+            return 0;
+        });
+        for(let i = 0; i < sortMembers.length ; i++){
+            document.write(`名前:${sortMembers[i].name} 年齢:${sortMembers[i].age} 趣味:${sortMembers[i].hobby} <br>`);
+        }
     </script>
 </body>
 </html>
